Added test of immutable list exception